test cases for qa

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.tasks</groupId>
-  <artifactId>webstaurantstore</artifactId>
+  <artifactId>invoicecloud</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>webstaurantstore</name>
+  <name>invoicecloud</name>
   <url>http://maven.apache.org</url>
 
  
@@ -97,12 +97,8 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.5</version>
 				<configuration>
-					<suiteXmlFiles>
-						<suiteXmlFile>smoketestng.xml</suiteXmlFile>
-						<suiteXmlFile>regressiontestng.xml</suiteXmlFile>
-					</suiteXmlFiles>
 					<systemPropertyVariables>
-						<log4j.configuration>file:C:\workspace\test\webstaurantstore\src\main\java\com\tasks\webstaurantstore\log4j.properties</log4j.configuration>
+						<log4j.configuration>file:C:\Users\pa67464\invoiceCloudTest\src\main\java\com\tasks\invoicecloud\log4j.properties</log4j.configuration>
 					</systemPropertyVariables>
 					<argLine>
 						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
